migrate less to scss, closes #1547
Closes #1547

Merge request studip/studip!967

--- a/resources/assets/stylesheets/mixins/studip.scss
+++ b/resources/assets/stylesheets/mixins/studip.scss
@@ -205,7 +205,7 @@
     background-attachment: local, local, scroll, scroll;
 }
 
-%scrollbox-horizontal {
+@mixin scrollbox-horizontal {
     overflow: auto;
 
     background:
