--- a/resources/assets/stylesheets/studip.scss
+++ b/resources/assets/stylesheets/studip.scss
@@ -20,11 +20,16 @@
 @import "scss/big-image-handler";
 @import "scss/blubber";
 @import "scss/buttons";
+@import "scss/clipboard";
 @import "scss/consultation";
+@import "scss/contacts";
 @import "scss/contentbar";
+@import "scss/content_box";
 @import "scss/contents";
 @import "scss/content";
 @import "scss/comments";
+@import "scss/copyable-links";
+@import "scss/cronjobs";
 @import "scss/courseware";
 @import "scss/coursewizard";
 @import "scss/css_tree";
@@ -36,7 +41,9 @@
 @import "scss/evaluation";
 @import "scss/files";
 @import "scss/feedback";
+@import "scss/forms";
 @import "scss/forum";
+@import "scss/gradebook";
 @import "scss/grid";
 @import "scss/header";
 @import "scss/headings";
@@ -45,39 +52,51 @@
 @import "scss/ilias-interface";
 @import "scss/index";
 @import "scss/fullscreen";
+@import "scss/globalsearch";
+@import "scss/layouts";
 @import "scss/links";
 @import "scss/lists";
 @import "scss/messages";
+@import "scss/mobile";
 @import "scss/my_courses";
 @import "scss/mvv";
+@import "scss/navigation";
+@import "scss/navigation-hoverborder";
 @import "scss/oer";
 @import "scss/overlapping";
-@import "scss/qrcode";
-@import "scss/questionnaire";
-@import "scss/quicksearch";
 @import "scss/oauth2";
+@import "scss/opengraph";
 @import "scss/pagination";
+@import "scss/personal-notifications";
 @import "scss/plugins";
 @import "scss/plus";
 @import "scss/progress_indicator.scss";
 @import "scss/profile";
+@import "scss/qrcode";
+@import "scss/questionnaire";
+@import "scss/quicksearch";
 @import "scss/raumzeit";
 @import "scss/report";
 @import "scss/resources";
 @import "scss/sidebar";
 @import "scss/select";
+@import "scss/selects";
 @import "scss/search";
 @import "scss/skiplinks";
 @import "scss/start";
 @import "scss/scroll-to-top";
+@import "scss/smileys";
 @import "scss/statusgroups";
+@import "scss/study-area-selection";
 @import "scss/studygroup";
 @import "scss/studip-overlay";
 @import "scss/studip-selection";
 @import "scss/table_of_contents";
+@import "scss/tabs";
 @import "scss/tooltip";
 @import "scss/tfa";
 @import "scss/tour";
+@import "scss/typography";
 @import "scss/user-administration";
 @import "scss/wiki";
 
