--- a/resources/assets/stylesheets/scss/content_box.scss
+++ b/resources/assets/stylesheets/scss/content_box.scss
@@ -1,5 +1,5 @@
 section.contentbox {
-    border-color: @content-color-40;
+    border-color: $content-color-40;
     border-style: solid;
     border-width: 1px;
     margin-bottom: 10px;
@@ -12,11 +12,11 @@ section.contentbox {
         justify-content: space-between;
 
         padding: 2px;
-        background-color: @content-color-20;
+        background-color: $content-color-20;
 
         span.title {
             font-size: medium;
-            color: @base-color;
+            color: $base-color;
 
             &.no-overflow {
                 width: calc(100% - 1.5em);
@@ -26,7 +26,7 @@ section.contentbox {
                 &:after {
                     content: "";
                     width: 4em;
-                    background: linear-gradient(to right, transparent, @content-color-20);
+                    background: linear-gradient(to right, transparent, $content-color-20);
                     position: absolute;
                     height: 1.5em;
                     right: 2.5em;
@@ -38,9 +38,10 @@ section.contentbox {
             flex: 1 0 0;
             padding: 5px;
             margin: 0;
-            color: @base-color;
+            color: $base-color;
             border-bottom: none;
             font-size: medium;
+
             > a {
                 img, svg {
                     margin-right: 5px;
@@ -61,15 +62,18 @@ section.contentbox {
             }
         }
     }
+
     footer:empty {
         display: none !important;
     }
+
     footer {
         text-align: center;
-        border-color: @content-color-40;
+        border-color: $content-color-40;
         border-top-style: solid;
         border-width: 1px;
-        background-color: white;}
+        background-color: $white;
+    }
 
     section {
         padding: 10px;
@@ -85,13 +89,13 @@ section.contentbox {
     }
 
     > article {
-        border-color: @content-color-40;
+        border-color: $content-color-40;
         border-style: solid;
         border-width: 1px;
         margin: 10px;
 
         > p, > section, > footer, > div {
-            max-height: 0px;
+            max-height: 0;
             opacity: 0;
             overflow: auto;
             transition: opacity 0.3s;
@@ -124,7 +128,7 @@ section.contentbox {
                     font-size: small;
                     width: 100%;
                     font-weight: bold;
-                    color: black;
+                    color: $black;
                 }
             }
 
@@ -141,14 +145,17 @@ section.contentbox {
 
         header {
             h1 a {
-                .icon('before', "arr_1right", 'clickable');
+                @include icon(before, arr_1right, clickable);
+
                 &:before {
                     transition: all 200ms ease 0s;
                     margin-right: 2px;
                 }
+
                 display: flex;
                 align-items: center;
             }
+
             nav {
                 a, > span {
                     display: inline-block;
@@ -158,12 +165,14 @@ section.contentbox {
                 > span {
                     &:last-child {
                         border-right: none;
-                        padding-right: 0px;
+                        padding-right: 0;
                     }
+
                     display: inline-block;
-                    border-right: 1px solid @content-color;
-                    padding: 0px 5px;
+                    border-right: 1px solid $content-color;
+                    padding: 0 5px;
                 }
+
                 a {
                     padding-left: 5px;
                     align-items: center;
@@ -174,36 +183,39 @@ section.contentbox {
 
         footer {
             text-align: center;
-            border-color: @content-color-40;
+            border-color: $content-color-40;
             border-top-style: none;
             border-width: 1px;
-            background-color: white;
+            background-color: $white;
+
             h1 {
                 font-size: 1em;
                 font-weight: bold;
                 border: none;
                 padding: 0;
             }
+
             article.comment {
                 border: 0;
-                border-top: 1px solid @light-gray-color-40;
+                border-top: 1px solid $light-gray-color-40;
                 max-width: 1260px;
-                margin: auto;
-                margin-bottom: 4px;
+                margin: auto auto 4px;
                 text-align: left;
+
                 h1 {
-                    margin-bottom: 0px;
+                    margin-bottom: 0;
                 }
+
                 time {
-                    float:right;
+                    float: right;
                     font-size: 0.8em;
-                    color: @light-gray-color-40;
+                    color: $light-gray-color-40;
                 }
             }
         }
 
         &:not(.open) header ~ * {
-            max-height: 0px;
+            max-height: 0;
             opacity: 0;
             overflow: auto;
             transition: opacity 0.3s;
@@ -227,14 +239,15 @@ section.contentbox {
 
         &.new {
             header h1 a {
-                .icon('before', "arr_1right", 'new');
+                @include icon(before, arr_1right, new);
             }
         }
 
         &.indented {
             margin-left: calc(10px + 1em);
+
             > header {
-                background-color: mix(@content-color, #fff, 10%);
+                background-color: mix($content-color, $white, 10%);
             }
         }
     }
