--- a/resources/assets/stylesheets/scss/cronjobs.scss
+++ b/resources/assets/stylesheets/scss/cronjobs.scss
@@ -13,11 +13,11 @@
         display: none;
     }
     .selected {
-        td { background-color: fadeout(@active-color, 75%); }
+        td { background-color: $red-40; }
         tr ~ tr {
             display: table-row;
             td {
-                background-color: #fff;
+                background-color: $white;
             }
             td[colspan] {
                 background-color: inherit;
@@ -26,7 +26,7 @@
         }
     }
     .parameters {
-        border: 1px solid #888;
+        border: 1px solid $dark-gray-color;
         border-bottom: 0;
         border-top: 0;
         padding: 0.5em;
@@ -49,7 +49,7 @@
         }
     }
     tbody:last-child .parameters {
-        border-bottom: 1px solid #888;
+        border-bottom: 1px solid $white;
         border-bottom-right-radius: 3px;
         border-bottom-left-radius: 3px;
     }
@@ -81,7 +81,7 @@
 }
 
 .inactivatible td {
-    color: #888;
+    color: $dark-gray-color;
 }
 
 .cronjobs-edit {
@@ -89,7 +89,7 @@
         margin: 0 0 0.5em;
     }
 
-    > table > thead > tr > th { .table_header_bold; }
+    //> table > thead > tr > th { .table_header_bold; }
     > table {
         margin-bottom: 1em;
     }
