--- a/resources/assets/stylesheets/scss/navigation.scss
+++ b/resources/assets/stylesheets/scss/navigation.scss
@@ -14,12 +14,12 @@ body:not(.fixed) #barTopMenu {
         height: 55px;
         padding: 0;
         z-index: 2;
-        font-size: @font-size-base;
+        font-size: $font-size-base;
     }
     a {
-        color: @base-color;
+        color: $base-color;
         display: block;
-        padding: 0 0px;
+        padding: 0 0;
         text-align: center;
         line-height: 1em;
 
@@ -27,7 +27,7 @@ body:not(.fixed) #barTopMenu {
         span {
             background: no-repeat 0 0;
             display: inline-block;
-            .square(32px);
+            @include square(32px);
 
             // Icon state: new
             &.new {
@@ -36,8 +36,8 @@ body:not(.fixed) #barTopMenu {
         }
 
         img {
-            margin: 8px 0px;
-            .square(32px);
+            margin: 8px 0;
+            @include square(32px);
         }
         &[data-badge]:not([data-badge="0"]) {
             position: relative;
@@ -48,13 +48,13 @@ body:not(.fixed) #barTopMenu {
                 top: 0;
 
                 margin-left: 5px;
-                .square(16px);
+                @include square(16px);
 
                 background-clip: content-box;
-                background-color: @red;
-                border: 3px solid @dark-gray-color-5;
+                background-color: $red;
+                border: 3px solid $dark-gray-color-5;
                 border-radius: 50%;
-                color: white;
+                color: $white;
                 content: attr(data-badge);
                 display: inline-block;
                 font-size: 10px;
@@ -85,7 +85,7 @@ body:not(.fixed) #barTopMenu {
     // Hide all navigation item title on hover and display only the currently
     // hovered one
     .navtitle {
-        @media not (prefers-reduced-motion) {
+        @media not prefers-reduced-motion {
             transition: opacity 300ms; // Smooth change when entering
         }
     }
@@ -95,7 +95,7 @@ body:not(.fixed) #barTopMenu {
         }
         > li:hover .navtitle {
             opacity: 1;
-            @media not (prefers-reduced-motion) {
+            @media not prefers-reduced-motion {
                 transition: opacity 0ms; // Quick change when leaving
             }
         }
@@ -129,7 +129,7 @@ body:not(.fixed) #barTopMenu {
 
         // Rotate icon
         > label img {
-            @media not (prefers-reduced-motion) {
+            @media not prefers-reduced-motion {
                 transition: transform 300ms;
             }
             transform: rotate(90deg);
@@ -137,7 +137,7 @@ body:not(.fixed) #barTopMenu {
 
         // Define transition duration for possible badge on overflow
         > label > a[data-badge]::before {
-            @media not (prefers-reduced-motion) {
+            @media not prefers-reduced-motion {
                 transition: opacity 300ms;
             }
         }
@@ -169,8 +169,8 @@ body:not(.fixed) #barTopMenu {
             margin: 5px 0 0;
             padding: 4px 4px;
 
-            background-color: @dark-gray-color-5;
-            border: 1px solid @dark-gray-color-40;
+            background-color: $dark-gray-color-5;
+            border: 1px solid $dark-gray-color-40;
             border-top: 0;
 
             min-width: 150px;
@@ -194,7 +194,7 @@ body:not(.fixed) #barTopMenu {
                 }
                 img {
                     flex: 1 0 20px;
-                    .square(20px);
+                    @include square(20px);
                     margin: 0 0.25em;
 
                 }
@@ -220,12 +220,12 @@ body:not(.fixed) #barTopMenu {
     display: none;
 }
 label[for="barTopMenu-toggle"] {
-    .background-icon('hamburger', 'info_alt', 16);
-    background-position: 0px center;
+    @include background-icon(hamburger, info_alt, 16);
+    background-position: 0 center;
     background-repeat: no-repeat;
 
-    color: @white;
-    line-height: @bar-bottom-container-height;
+    color: $white;
+    line-height: $bar-bottom-container-height;
     overflow: hidden;
     padding-left: (5px + 16px + 5px); // padding + icon + next padding
     white-space: nowrap;
@@ -233,7 +233,7 @@ label[for="barTopMenu-toggle"] {
     height: 0;
     max-height: 0;
     opacity: 0;
-    @media not (prefers-reduced-motion) {
+    @media not prefers-reduced-motion {
         transition: all 300ms;
     }
 
@@ -250,20 +250,20 @@ html.no-touch {
 
 body.fixed {
     #flex-header {
-        height: @header-height;
+        height: $header-height;
     }
 
     label[for="barTopMenu-toggle"] {
         opacity: 1;
-        max-height: @bar-bottom-container-height;
+        max-height: $bar-bottom-container-height;
         height: auto;
     }
     #barTopMenu {
-        background-color: @base-color;
+        background-color: $base-color;
 
         list-style: none;
-        margin: 0px 0px 0px -15px;
-        padding: 0px;
+        margin: 0 0 0px -15px;
+        padding: 0;
         position: absolute;
 
         width: fit-content;
@@ -272,9 +272,7 @@ body.fixed {
         display: none;
 
         img {
-            filter: contrast(0) brightness(2);
-
-            .square(16px);
+            @include square(16px);
             margin-right: 0.8em;
         }
 
@@ -286,11 +284,11 @@ body.fixed {
                 flex-wrap: nowrap;
                 align-items: center;
 
-                color: @white;
+                color: $white;
             }
 
             &:hover {
-                background-color: @base-color-80;
+                background-color: $base-color-80;
             }
 
             &.overflow {
