--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -2667,6 +2667,13 @@ m a n a g e r
             padding: 0.25em 0 0.5em 0;
             font-size: 1.6em;
             font-weight: 700;
+
+            button.cw-insert-element {
+                background: transparent;
+                border: none;
+                cursor: pointer;
+                padding: 0;
+            }
         }
     }
     .cw-manager-element-containers {
