--- a/resources/assets/stylesheets/scss/courseware.scss
+++ b/resources/assets/stylesheets/scss/courseware.scss
@@ -3674,16 +3674,22 @@ i f r a m e  b l o c k  e n d
 /* * * * * * * * * * * *
 f o l d e r  b l o c k
 * * * * * * * * * * * */
+.cw-block-folder-info {
+    border: solid thin $content-color-40;
+    padding: 10px 10px 0 10px;
+    overflow: hidden;
+    border-bottom: none;
+}
 .cw-block-folder-list {
-    border: solid thin #ccc;
-    padding: 4px;
+    border: solid thin $content-color-40;
+    padding: 0;
     list-style: none;
 
     .cw-block-folder-file-item {
         list-style: none;
 
         &:not(:last-child) {
-            border-bottom: solid thin #ccc;
+            border-bottom: solid thin $content-color-40;
         }
         a {
             display: block;
@@ -3702,16 +3708,27 @@ f o l d e r  b l o c k
         margin: 1em;
     }
 }
- // for folder and download block
+.cw-block-folder-upload {
+    border: solid thin $content-color-40;
+    padding: 1em 10px;
+    border-top: none;
+
+    .cw-file-input {
+        width: calc(100% - 148px);
+        vertical-align: middle;
+    }
+}
+// for folder and download block
 .cw-block-file-info {
     @include background-icon(file, clickable, 24);
     background-repeat: no-repeat;
 
-    display: inline-block;
-    padding-left: 26px;
-    margin: 1em;
-    line-height: 24px;
-    color: $base-color;
+    display: block;
+    padding: 16px 16px 16px 40px;
+    background-position: 10px 16px;
+    width: calc(100% - 56px);
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.cw-block-file-icon-empty {
         color: $black;
@@ -3723,34 +3740,77 @@ f o l d e r  b l o c k
     }
     &.cw-block-file-icon-audio {
         @include background-icon(file-audio, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-audio, info, 24);
+        }
     }
     &.cw-block-file-icon-pic {
         @include background-icon(file-pic, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-pic, info, 24);
+        }
     }
     &.cw-block-file-icon-video {
         @include background-icon(file-video, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-video, info, 24);
+        }
     }
     &.cw-block-file-icon-pdf {
         @include background-icon(file-pdf, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-pdf, info, 24);
+        }
     }
     &.cw-block-file-icon-word {
         @include background-icon(file-word, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-word, info, 24);
+        }
     }
     &.cw-block-file-icon-spreadsheet {
         @include background-icon(file-excel, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-excel, info, 24);
+        }
     }
     &.cw-block-file-icon-text {
         @include background-icon(file-text, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-text, info, 24);
+        }
     }
     &.cw-block-file-icon-ppt {
         @include background-icon(file-ppt, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-ppt, info, 24);
+        }
     }
     &.cw-block-file-icon-archive {
         @include background-icon(file-archive, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file-archive, info, 24);
+        }
     }
     &.cw-block-file-icon-file {
         @include background-icon(file, clickable, 24);
+        &.download-disabled {
+            @include background-icon(file, info, 24);
+        }
     }
+}
+.cw-block-file-details {
+    margin-top: -16px;
+    padding-left: 40px;
+    padding-bottom: 16px;
+    color: $dark-gray-color;
+}
+.cw-block-file-owner,
+.cw-block-file-mkdate {
+    display: block;
+    width: calc(100% - 56px);
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 /* * * * * * * * * * * * * * *
 f o l d e r  b l o c k  e n d
@@ -3763,7 +3823,6 @@ d o w n l o a d  b l o c k
 .cw-block-download {
     .cw-block-download-content {
         border: solid thin $content-color-40;
-        padding: 4px;
         .cw-block-download-file-item {
             a {
                 display: block;
@@ -4766,7 +4825,7 @@ cw tiles end
  .cw-file-input {
      width: stretch;
      border: solid thin $base-color;
-     font-size: 14px;
+     font-size: 13px;
     cursor: pointer;
 
     &::file-selector-button {
